[package]
name = "axum-unix-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1.37.0", features = ["full"] }
