[package]
name = "espora-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { version = "0.6.0", features = ["serde"] }
libc = { version = "0.2.154", default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
winapi = { version = "0.3.9", features = ["synchapi"] }
