[package]
name = "espora-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { version = "0.6.0", features = ["serde"] }
futures = "0.3.30"

libc = { version = "0.2.154", default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = [
  "fs",
  "io-std",
  "io-util",
  "rt",
  "sync",
] }
winapi = { version = "0.3.9", features = ["synchapi", "fileapi"] }

[features]
tokio = ["async-stream", "futures", "dep:tokio"]
